--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
 atproto==0.0.61
+discord.py>=2.3.0
+discord-ext-voice-recv==0.5.2a179
+fastapi==0.115.8
 grapheme==0.6.0
 letta-client==0.1.235
 pydantic==2.11.7
 pyyaml==6.0.2
 requests==2.32.4
 rich==14.1.0
+uvicorn==0.34.0
+websockets==13.1
